--- a/style.css
+++ b/style.css
@@ -7,11 +7,13 @@ body,
     box-sizing: border-box;
     font-size: 1em;
     color: #5f6982;
+   
 }
 
 html,
 body {
-    width: auto ;
+    max-width: 768px ;
+    margin: 0 auto;
     height: 100vw;
     text-align: center;
 }
