--- a/style.css
+++ b/style.css
@@ -98,7 +98,6 @@ p {
     font-size: 1em;
 }
 
-
 .uploader #response {
     float: left;
     clear: both;
@@ -122,9 +121,9 @@ p {
     /* width: 140px; */
     /* height: 222px; */
 
-    max-width: 140px;
-    max-height: 140px;
-    border-radius: 70px;
+    width: 23%;
+    height: 23%;
+    border-radius: 50%;
     animation: fadein 2s;
         -moz-animation: fadein 2s;
         /* Firefox */
@@ -136,35 +135,35 @@ p {
     .uploader #file-image1 {
         display: inline;
         /* margin: 0 auto 0.5rem auto; */
-        width: 140px;
-        height: 140px;
+        width: 23%;
+        height: 23%;
         opacity: 0.5;
         position: relative;
-        transform: translateX(72px);
-        transition: all 10s ease;
-        border-radius: 70px;
+        transform: translateX(50%);
+        transition: all 5s ease;
+        border-radius: 50%;
         
     }
     .uploader #file-image2 {
         display: inline;
         /* margin: 0 auto 0.5rem auto; */
-        width: 140px;
-        height: 140px;
+        width: 23%;
+    height: 23%;
         border-radius: 2em;
         opacity: 0.5;
         position: relative;
-        transform: translateX(-72px);
-        transition: all 10s ease;
-        border-radius: 70px;
+        transform: translateX(-50%);
+        transition: all 5s ease;
+        border-radius: 50%;
         
     }
     .uploader #file-image3 {
         display: inline;
         /* margin: 0 auto 0.5rem auto; */
        
-        max-width: 140px;
-        max-height: 140px;
-        border-radius: 70px;
+        width: 23%;
+        height: 23%;
+        border-radius: 50%;
         animation: fadein 2s;
         -moz-animation: fadein 2s;
         /* Firefox */
@@ -177,114 +176,7 @@ p {
     
     }
 
-@media screen and (max-width: 630px) {
-    .uploader #file-image {
-        display: inline-block;
-        max-width: 75px;
-        max-height: 75px;
-        border-radius: 37px;
-        animation: fadein 2s;
-            -moz-animation: fadein 2s;
-            /* Firefox */
-            -webkit-animation: fadein 2s;
-            /* Safari and Chrome */
-            -o-animation: fadein 2s;
-            /* Opera */
-        }
-    .uploader #file-image1 {
-        display: inline;
-        /* margin: 0 auto 0.5rem auto; */
-        max-width: 75px;
-        max-height: 75px;
-        border-radius: 38.5px;
-        opacity: 0.5;
-        position: relative;
-        transform: translateX(38.5px);
-        transition: all 5s ease;
-        }
-    .uploader #file-image2 {
-        display: inline;
-        /* margin: 0 auto 0.5rem auto; */
-        max-width: 75px;
-        max-height: 75px;
-        border-radius: 38.5px;
-        opacity: 0.5;
-        position: relative;
-        transform: translateX(-38.5px);
-        transition: all 5s ease;
-     }
-    .uploader #file-image3 {
-        display: inline;
-        /* margin: 0 auto 0.5rem auto; */
-        max-width: 75px;
-        max-height: 75px;
-        border-radius: 38.5px;
-        animation: fadein 2s;
-        -moz-animation: fadein 2s;
-        /* Firefox */
-        -webkit-animation: fadein 2s;
-        /* Safari and Chrome */
-        -o-animation: fadein 2s;
-        /* Opera */
-        position: relative;
-        /* left: -140px; */
-        }
-    }
 
-    @media screen and (max-width: 280px) {
-        .uploader #file-image {
-            display: inline-block;
-            max-width: 55px;
-            max-height: 55px;
-            border-radius: 27.5px;
-            animation: fadein 2s;
-                -moz-animation: fadein 2s;
-                /* Firefox */
-                -webkit-animation: fadein 2s;
-                /* Safari and Chrome */
-                -o-animation: fadein 2s;
-                /* Opera */
-            }
-        .uploader #file-image1 {
-            display: inline;
-            /* margin: 0 auto 0.5rem auto; */
-            max-width: 55px;
-            max-height: 55px;
-            border-radius: 27.5px;
-            opacity: 0.5;
-            position: relative;
-            transform: translateX(27.5px);
-            transition: all 5s ease;
-            }
-        .uploader #file-image2 {
-            display: inline;
-            /* margin: 0 auto 0.5rem auto; */
-            max-width: 55px;
-            max-height: 55px;
-            border-radius: 27.5px;
-            opacity: 0.5;
-            position: relative;
-            transform: translateX(-27.5px);
-            transition: all 5s ease;
-         }
-        .uploader #file-image3 {
-            display: inline;
-            /* margin: 0 auto 0.5rem auto; */
-            max-width: 55px;
-            max-height: 55px;
-            border-radius: 27.5px;
-            animation: fadein 2s;
-            -moz-animation: fadein 2s;
-            /* Firefox */
-            -webkit-animation: fadein 2s;
-            /* Safari and Chrome */
-            -o-animation: fadein 2s;
-            /* Opera */
-            position: relative;
-            /* left: -140px; */
-            }
-        }
-    
 .uploader #file-image.hidden {
     display: none;
 }
