--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ body,
     box-sizing: border-box;
     font-size: 1em;
     color: #5f6982;
-
    
 }
 
@@ -114,7 +113,6 @@ p {
 /* .uploader #response #messages {
   margin-bottom: 0.5rem;
 } */
-/* @media screen and (max-width: 768) { */
 .uploader #file-image {
     display: inline-block;
     /* margin: 0 auto 0.5rem auto; */
@@ -123,7 +121,7 @@ p {
 
     max-width: 140px;
     max-height: 140px;
-    border-radius: 70px;
+    border-radius: 2em;
     animation: fadein 2s;
         -moz-animation: fadein 2s;
         /* Firefox */
@@ -131,17 +129,19 @@ p {
         /* Safari and Chrome */
         -o-animation: fadein 2s;
         /* Opera */
-    }
+   
+}
+@media screen and (min-width: 620px) {
     .uploader #file-image1 {
         display: inline;
         /* margin: 0 auto 0.5rem auto; */
         width: 140px;
         height: 140px;
+        border-radius: 2em;
         opacity: 0.5;
         position: relative;
         transform: translateX(72px);
-        transition: all 10s ease;
-        border-radius: 70px;
+        transition: all 5s ease;
         
     }
     .uploader #file-image2 {
@@ -153,82 +153,39 @@ p {
         opacity: 0.5;
         position: relative;
         transform: translateX(-72px);
-        transition: all 10s ease;
-        border-radius: 70px;
+        transition: all 5s ease;
         
     }
-    .uploader #file-image3 {
-        display: inline;
-        /* margin: 0 auto 0.5rem auto; */
-       
-        max-width: 140px;
-        max-height: 140px;
-        border-radius: 70px;
-        animation: fadein 2s;
-        -moz-animation: fadein 2s;
-        /* Firefox */
-        -webkit-animation: fadein 2s;
-        /* Safari and Chrome */
-        -o-animation: fadein 2s;
-        /* Opera */
-        position: relative;
-        /* left: -140px; */
-    
-    }
-
-@media screen and (max-width: 630px) {
-    .uploader #file-image {
-        display: inline-block;
-        max-width: 75px;
-        max-height: 75px;
-        border-radius: 37px;
-        animation: fadein 2s;
-            -moz-animation: fadein 2s;
-            /* Firefox */
-            -webkit-animation: fadein 2s;
-            /* Safari and Chrome */
-            -o-animation: fadein 2s;
-            /* Opera */
-        }
+}
+@media screen and (max-width: 620px) {
     .uploader #file-image1 {
-        display: inline;
-        /* margin: 0 auto 0.5rem auto; */
-        max-width: 75px;
-        max-height: 75px;
-        border-radius: 37px;
-        opacity: 0.5;
-        position: relative;
-        transform: translateX(37px);
-        transition: all 5s ease;
-        }
-    .uploader #file-image2 {
-        display: inline;
-        /* margin: 0 auto 0.5rem auto; */
-        max-width: 75px;
-        max-height: 75px;
-        border-radius: 37px;
-        opacity: 0.5;
-        position: relative;
-        transform: translateX(-37px);
-        transition: all 5s ease;
-     }
-    .uploader #file-image3 {
-        display: inline;
-        /* margin: 0 auto 0.5rem auto; */
-        max-width: 75px;
-        max-height: 75px;
-        border-radius: 37px;
-        animation: fadein 2s;
-        -moz-animation: fadein 2s;
-        /* Firefox */
-        -webkit-animation: fadein 2s;
-        /* Safari and Chrome */
-        -o-animation: fadein 2s;
-        /* Opera */
-        position: relative;
-        /* left: -140px; */
-        }
+        display: none;
     }
+    .uploader #file-image2 {
+        display: none;
+    }
+}
+
+
+.uploader #file-image3 {
+    display: inline;
+    /* margin: 0 auto 0.5rem auto; */
+   
+    max-width: 140px;
+    max-height: 140px;
+    border-radius: 2em;
+    animation: fadein 2s;
+    -moz-animation: fadein 2s;
+    /* Firefox */
+    -webkit-animation: fadein 2s;
+    /* Safari and Chrome */
+    -o-animation: fadein 2s;
+    /* Opera */
+    position: relative;
+    /* left: -140px; */
+
+}
+
 
 .uploader #file-image.hidden {
     display: none;
